--- a/ShopBack/View/MovieDetail/MovieDetailViewController.storyboard
+++ b/ShopBack/View/MovieDetail/MovieDetailViewController.storyboard
@@ -28,6 +28,9 @@
                                 <state key="normal" title="Book">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="bookAction:" destination="cUI-mL-dTl" eventType="touchUpInside" id="Iiw-5e-oGa"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Myr-8N-Np2" userLabel="Anchor View">
                                 <rect key="frame" x="0.0" y="20" width="375" height="720"/>
